--- a/text.html
+++ b/text.html
@@ -72,7 +72,126 @@
             </div>
 
         </section>
+        <section>
+            
+            <div class="roadmap">
+                <div class="row1">
+                    <div class="col1"></div>
+                    <div class="col2">
+                        <div class="sub-col2-col1">
+                            <p class="roadmap-main-content">Road Map</p>
+                            <p class="roadmap-lorem-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
 
+                        </div>
+                        <div class="sub-col2-col2">
+                            <img  class="child" src="/img/child3_logo.png">
+                        </div>
+                    </div>
+                    <div class="col3"></div>
+                </div>
+                <div class="row2">
+                    <div class="row2-col1"></div>
+                    <div class="row2-col2">
+                        <img src="/img/Rectangle 16.png" class="img-center">
+                    </div>
+                    <div class="row2-col3">
+                        <p class="row2-col3-content">2022</p>
+                        <p class="row2-col3-content2">Q1</p>
+                        <p class="row2-col3-content3">Lorem ipsum dolor sit amet, consectetur.</p>
+                    </div>
+                    <div class="row2-col4"></div>
+                    <div class="row2-col5"></div>
+
+                </div>
+                <div class="row3">
+                    <div class="row3-col1"></div>
+                    <div class="row3-col2"></div>
+                    <div class="row3-col3"></div>
+
+                </div>
+                <div class="row4">
+                    <div class="row4-col1"></div>
+                    <div class="row4-col2">
+                        <p class="row2-col3-content">2022</p>
+                        <p class="row2-col3-content2">Q2</p>
+                        <div class="row3-col3-div">
+                            <p class="row3-col3-content3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Suspendisse id puruse augue.</p>
+                        </div>
+                    </div>
+                    <div class="row4-col3">
+                        <div class="image-right">
+                            <img src="/img/Rectangle 17.png" class="img-right">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row5">
+                    <div class="row5-col1">
+                        <div class="image-left">
+                            <img src="/img/Rectangle 17.png" class="img-left">
+                        </div>
+                    </div>
+                    <div class="row5-col2">
+                        <p class="row2-col3-content">2022</p>
+                        <p class="row2-col3-content2">Q3</p>
+                        <p class="row5-col3-content3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Suspendisse id puruse augue.</p>
+                    </div>
+                    <div class="row-col3"></div>
+                </div>
+
+                <div class="row6">
+                    <div class="row6-col1"></div>
+                    <div class="row6-col2">
+                        <p class="row2-col3-content">2022</p>
+                        <p class="row2-col3-content2">Q4</p>
+                        <div class="row3-col3-div">
+                            <p class="row3-col3-content3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Suspendisse id puruse augue.</p>
+                        </div>
+                    </div>
+                    <div class="row6-col3">
+                        <div class="image-right">
+                            <img src="/img/Rectangle 17.png" class="img-right">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row7">
+                    <div class="row7-col1">
+                        <div class="image-left">
+                            <img src="/img/Rectangle 17.png" class="img-left">
+                        </div>
+                    </div>
+                    <div class="row7-col2">
+                        <p class="row2-col3-content">2023</p>
+                        <p class="row2-col3-content2">Q1</p>
+                        <p class="row5-col3-content3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Suspendisse id puruse augue.</p>
+                    </div>
+                    <div class="row-col3"></div>
+                </div>
+
+                <div class="row8">
+                    <div class="row8-col1"></div>
+                    <div class="row8-col2">
+                        <p class="row2-col3-content">2023</p>
+                        <p class="row2-col3-content2">Q2</p>
+                        <div class="row3-col3-div">
+                            <p class="row3-col3-content3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Suspendisse id puruse augue.</p>
+                        </div>
+                    </div>
+                    <div class="row8-col3">
+                        <div class="image-right">
+                            <img src="/img/Rectangle 17.png" class="img-right">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 
 </html>
